kubernetes/apps/default/whoami/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: traefik-middleware-chains-default
          namespace: networking
  tls:
    secretName: "whoami-${SECRET_DOMAIN/./-}-tls"
